Add custom fields to the biber data model

--- a/biber-tool.conf
+++ b/biber-tool.conf
@@ -593,6 +593,8 @@
       <field fieldtype="field" datatype="literal" skip_output="true">sortshorthand</field>
       <field fieldtype="field" datatype="literal" skip_output="true">sortkey</field>
       <field fieldtype="field" datatype="literal" skip_output="true">presort</field>
+      <field fieldtype="field" datatype="literal" skip_output="true">webnote</field>
+      <field fieldtype="field" datatype="literal" skip_output="true">bibsource</field>
       <field fieldtype="list" datatype="literal">institution</field>
       <field fieldtype="list" datatype="literal">lista</field>
       <field fieldtype="list" datatype="literal">listb</field>
@@ -844,6 +846,8 @@
       <field>xref</field>
       <field>year</field>
       <field>yeardivision</field>
+      <field>webnote</field>
+      <field>bibsource</field>
     </entryfields>
     <entryfields>
       <entrytype>set</entrytype>
@@ -1740,4 +1744,3 @@
     </constraints>
   </datamodel>
 </config>
-
