remove pages from articles in biblatex

--- a/biber-tool.conf
+++ b/biber-tool.conf
@@ -1593,6 +1593,12 @@
         <field>journaltitle</field>
         <field>title</field>
       </constraint>
+      <constraint type="mandatory">
+        <fieldxor>
+          <field>eid</field>
+          <field>pages</field>
+        </fieldxor>
+      </constraint>
     </constraints>
     <constraints>
       <entrytype>book</entrytype>
