Remove pages from inproceedings as well

--- a/biber-tool.conf
+++ b/biber-tool.conf
@@ -1708,6 +1708,12 @@
         <field>title</field>
         <field>booktitle</field>
       </constraint>
+      <constraint type="mandatory">
+        <fieldxor>
+          <field>eid</field>
+          <field>pages</field>
+        </fieldxor>
+      </constraint>
     </constraints>
     <constraints>
       <entrytype>report</entrytype>
