Add ACM's articleno field as alternative to eid

--- a/biber-tool.conf
+++ b/biber-tool.conf
@@ -534,6 +534,7 @@
       <field fieldtype="field" datatype="literal">chapter</field>
       <field fieldtype="field" datatype="literal">edition</field>
       <field fieldtype="field" datatype="literal">eid</field>
+      <field fieldtype="field" datatype="literal">articleno</field>
       <field fieldtype="field" datatype="literal">entrysubtype</field>
       <field fieldtype="field" datatype="literal">eprintclass</field>
       <field fieldtype="field" datatype="literal">eprinttype</field>
@@ -868,6 +869,7 @@
       <field>editorbtype</field>
       <field>editorctype</field>
       <field>eid</field>
+      <field>articleno</field>
       <field>issn</field>
       <field>issue</field>
       <field>issuetitle</field>
@@ -1380,6 +1382,7 @@
       <field>editor</field>
       <field>editortype</field>
       <field>eid</field>
+      <field>articleno</field>
       <field>eventday</field>
       <field>eventendday</field>
       <field>eventendhour</field>
@@ -1595,6 +1598,7 @@
       </constraint>
       <constraint type="mandatory">
         <fieldxor>
+          <field>articleno</field>
           <field>eid</field>
           <field>pages</field>
         </fieldxor>
